# stockbot

./: README.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_credentials.py  0002_create_news_tables.py
backend/src/stockbot/: __init__.py  main.py
backend/src/stockbot/core/: __init__.py  config.py  db.py  error_handlers.py  errors.py  logging.py  scheduler.py  security.py
backend/src/stockbot/core/clients/: __init__.py  finnhub.py  naver.py  toss.py
backend/src/stockbot/domain/: __init__.py
backend/src/stockbot/domain/auth/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/stockbot/domain/health/: __init__.py  router.py
backend/src/stockbot/domain/news/: __init__.py  dedup.py  models.py  normalize.py  repository.py  router.py  schemas.py  service.py  symbols.py
backend/src/stockbot/domain/news/ingestors/: __init__.py  base.py  finnhub_news.py  naver_news.py
backend/src/stockbot/domain/portfolio/: __init__.py  router.py  schemas.py  service.py
backend/src/stockbot/domain/stocks/: router.py  schemas.py  service.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_news.py  test_portfolio.py  test_stocks.py
docs/: README.md
docs/design/: API_정의서.md  news-pipeline.md  tech-stack.md
docs/manual/: 00_사전_준비물_설치.md  02_환경변수_env_설정.md  (+7 more)
frontend/: .env.example  .eslintrc.js  .gitignore  README.md  app.json  babel.config.js  package-lock.json  package.json  tailwind.config.js
(+46 files in other folders)
