[project]
name = "stockbot"
version = "0.1.0"
description = "Stock Bot backend — Toss account connect + portfolio holdings"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "sqlalchemy==2.0.51",
    "alembic==1.18.4",
    "psycopg[binary]==3.3.4",
    "cryptography==49.0.0",
    "loguru==0.7.3",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stockbot"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["stockbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
